side scrolling issue on mobile

--- a/Web-Frontend/src/assets/styling/base.scss
+++ b/Web-Frontend/src/assets/styling/base.scss
@@ -54,4 +54,5 @@ body {
 
 html {
     scroll-behavior: auto;
+    overflow-x: hidden;
 }
